--- a/src/c/CudaImageProcessor.vcxproj
+++ b/src/c/CudaImageProcessor.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="Cuda\ImageChunk.cpp" />
     <ClCompile Include="Cuda\LoGKernel.cpp" />
     <ClInclude Include="Cuda\CudaClosure.cuh" />
+    <ClInclude Include="Cuda\CudaLoG.cuh" />
     <ClInclude Include="Cuda\CudaMeanFilter.cuh" />
     <ClInclude Include="Cuda\CudaOpener.cuh" />
     <ClInclude Include="Cuda\SeparableMultiplySum.cuh">
