--- a/src/c/CudaImageProcessor.vcxproj
+++ b/src/c/CudaImageProcessor.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="Cuda\GaussianKernel.cpp" />
     <ClCompile Include="Cuda\ImageChunk.cpp" />
     <ClCompile Include="Cuda\LoGKernel.cpp" />
+    <ClInclude Include="Cuda\BufferConversions.h" />
     <ClInclude Include="Cuda\CudaClosure.cuh" />
     <ClInclude Include="Cuda\CudaLoG.cuh" />
     <ClInclude Include="Cuda\CudaMeanFilter.cuh" />
