--- a/src/c/CudaImageProcessor.vcxproj.filters
+++ b/src/c/CudaImageProcessor.vcxproj.filters
@@ -128,6 +128,9 @@
     <ClInclude Include="Cuda\BufferConversions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cuda\CudaStdFilter.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Cuda\ImageDimensions.cuh">
