--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -100,7 +100,7 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
   <ItemGroup>
     <ClCompile Include="Mex\CudaMex.cpp" />
     <ClCompile Include="Mex\MexElementWiseDifference.cpp" />
-    <ClCompile Include="Mex\MedianFilter.cpp" />
+    <ClCompile Include="Mex\MexMedianFilter.cpp" />
     <ClCompile Include="Mex\MexClosure.cpp" />
     <ClCompile Include="Mex\MexCommand.cpp" />
     <ClCompile Include="Mex\MexDeviceCount.cpp" />
@@ -114,6 +114,7 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
     <ClCompile Include="Mex\MexMinFilter.cpp" />
     <ClCompile Include="Mex\MexMultiplySum.cpp" />
     <ClCompile Include="Mex\MexOpener.cpp" />
+    <ClCompile Include="Mex\MexStdFilter.cpp" />
     <ClCompile Include="Mex\ScopedProcessMutex.cpp" />
     <None Include="Mex\_TemplateMex.cpp" />
   </ItemGroup>
