--- a/src/c/CudaImageProcessor.vcxproj.filters
+++ b/src/c/CudaImageProcessor.vcxproj.filters
@@ -131,6 +131,9 @@
     <ClInclude Include="Cuda\CudaStdFilter.cuh">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cuda\CudaEntropyFilter.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Cuda\CudaGetMinMax.cuh">
       <Filter>Header Files</Filter>
     </ClInclude>
