--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 *.mexw64 filter=lfs diff=lfs merge=lfs -text
 *.mat filter=lfs diff=lfs merge=lfs -text
 *.ai filter=lfs diff=lfs merge=lfs -text
-
+*.png filter=lfs diff=lfs merge=lfs -text
