--- a/src/c/CudaImageProcessor.vcxproj.filters
+++ b/src/c/CudaImageProcessor.vcxproj.filters
@@ -146,6 +146,9 @@
     <ClInclude Include="Cuda\CudaMeanAndVariance.cuh">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cuda\CudaSum.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Cuda\ImageDimensions.cuh">
