Added minMax getter

--- a/src/c/CudaImageProcessor.vcxproj
+++ b/src/c/CudaImageProcessor.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="Cuda\CudaMeanAndVariance.cuh" />
     <ClInclude Include="Cuda\CudaMeanFilter.cuh" />
     <ClInclude Include="Cuda\CudaMedianFilter.cuh" />
+    <ClInclude Include="Cuda\CudaMinMax.cuh" />
     <ClInclude Include="Cuda\CudaOpener.cuh" />
     <ClInclude Include="Cuda\CudaElementWiseDifference.cuh" />
     <ClInclude Include="Cuda\CudaHighPassFilter.cuh" />
