--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -119,6 +119,7 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
     <ClCompile Include="Mex\MexOpener.cpp" />
     <ClCompile Include="Mex\MexStdFilter.cpp" />
     <ClCompile Include="Mex\MexSum.cpp" />
+    <ClCompile Include="Mex\MexVarFilter.cpp" />
     <ClCompile Include="Mex\MexWienerFilter.cpp" />
     <ClCompile Include="Mex\ScopedProcessMutex.cpp" />
     <None Include="Mex\_TemplateMex.cpp" />
