--- a/src/c/makefile
+++ b/src/c/makefile
@@ -4,23 +4,25 @@
 MATALAB_DIR = /usr/local/MATLAB/R2018b
 # NOTE: Currently only builds against python3
 PYTHON_VER = python3.5
-PYTHON3_INC = /usr/include/$(PYTHON_VER)/
-NUMPY3_INC = /usr/include/$(PYTHON_VER)/
+PYTHON3_INC = /usr/include/$(PYTHON_VER)
+NUMPY3_INC = /usr/include/$(PYTHON_VER)
 PYTHON_LIB = /usr/lib/$(PYTHON_VER)/config-3.5m-x86_64-linux-gnu
 
 #########################################
 # Default files and include dirs
 #########################################
 
+OBJ_DIR := Intermediate
+
 CU_FILES := $(wildcard Cuda/*.cu)
 CUPP_FILES := $(wildcard Cuda/*.cpp)
 MEX_CPP_FILES := $(filter-out Mex/_TemplateMex.cpp, $(wildcard Mex/*.cpp))
 PY_CPP_FILES := $(wildcard Python/*.cpp)
 
-CUDA_OBJ = $(notdir $(CU_FILES:.cu=.o))
-CUDA_CPP_OBJ = $(notdir $(CUPP_FILES:.cpp=.o))
-MEX_CPP_OBJ = $(notdir $(MEX_CPP_FILES:.cpp=.o))
-PY_CPP_OBJ = $(notdir $(PY_CPP_FILES:.cpp=.o))
+CUDA_OBJ = $(addprefix $(OBJ_DIR)/,$(notdir $(CU_FILES:.cu=.o)))
+CUDA_CPP_OBJ = $(addprefix $(OBJ_DIR)/,$(notdir $(CUPP_FILES:.cpp=.o)))
+MEX_CPP_OBJ = $(addprefix $(OBJ_DIR)/,$(notdir $(MEX_CPP_FILES:.cpp=.o)))
+PY_CPP_OBJ = $(addprefix $(OBJ_DIR)/,$(notdir $(PY_CPP_FILES:.cpp=.o)))
 
 CUDA_INC = -I./Cuda
 MEX_INC = -I./WrapCmds -I./Mex -I./external -I$(MATALAB_DIR)/extern/include
@@ -33,11 +35,11 @@ PY_LIB = -L$(PYTHON_LIB) -l$(PYTHON_VER)
 # Common parameters
 #########################################
 # Passed to both Nvidia compiler and gcc/clang
-CPP_FLAGS = -std=c++11
+CPP_FLAGS = -std=c++11 -g
 
 # Passed to gcc/clang and passthrough (--compiler-options) in nvcc
 # NOTE: Any warning flags such as '-Wall' should go here
-C_FLAGS = -fopenmp -fPIC
+C_FLAGS = -fopenmp -fPIC -g
 
 # Pass-through linker arguments (--linker-options) in nvcc linking step
 LD_FLAGS = --no-undefined
@@ -72,7 +74,7 @@ python: HIP.so
 	@echo Finished compiling python wrappers
 
 matlab: Mex.mexa64
-	@echo Fhinished compiling matlab wrappers
+	@echo Finished compiling matlab wrappers
 
 #########################################
 # link it all together
@@ -86,19 +88,23 @@ Mex.mexa64: $(CUDA_OBJ) $(MEX_CPP_OBJ) $(CUDA_CPP_OBJ)
 #########################################
 # compile the cuda library files
 #########################################
-%.o: Cuda/%.cu
+$(OBJ_DIR)/%.o: Cuda/%.cu
+	@mkdir -p $(@D)
 	$(NVCC_PATH) $(NVCC_FLAGS) $(SMODEL) --compiler-options '$(C_FLAGS)' -c $< -o $@ $(NVCC_INC) -dc
 
-%.o: Cuda/%.cpp
+$(OBJ_DIR)/%.o: Cuda/%.cpp
+	@mkdir -p $(@D)
 	$(C_COMPILER) $(GCC_FLAGS) $(CUDA_INC) -c $< -o $@
 
 #########################################
 # compile the mex/python wrappers
 #########################################
-%.o: Mex/%.cpp
+$(OBJ_DIR)/%.o: Mex/%.cpp
+	@mkdir -p $(@D)
 	$(C_COMPILER) $(GCC_FLAGS) $(MEX_INC) -c $< -o $@
 
-%.o: Python/%.cpp
+$(OBJ_DIR)/%.o: Python/%.cpp
+	@mkdir -p $(@D)
 	$(C_COMPILER) $(GCC_FLAGS) $(PY_INC) -c $< -o $@
 
 #########################################
@@ -106,4 +112,5 @@ Mex.mexa64: $(CUDA_OBJ) $(MEX_CPP_OBJ) $(CUDA_CPP_OBJ)
 #########################################
 clean:
 	@echo Cleaning
-	rm -f *.o Mex.mexa64 HIP.so
+	rm -Rf $(OBJ_DIR)
+	rm -f Mex.mexa64 HIP.so
