--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -107,6 +107,7 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
     <ClCompile Include="Mex\MexElementWiseDifference.cpp" />
     <ClCompile Include="Mex\MexGetMinMax.cpp" />
     <ClCompile Include="Mex\MexEntropyFilter.cpp" />
+    <ClCompile Include="Mex\MexIdentityFilter.cpp" />
     <ClCompile Include="Mex\MexMedianFilter.cpp" />
     <ClCompile Include="Mex\MexClosure.cpp" />
     <ClCompile Include="Mex\MexCommand.cpp" />
